test/corpus/basic.txt
==================
Identifier
==================
my_identifier
---
(source_file
    (identifier)
)
==================
Number
==================
01234
---
(source_file
    (number)
)
==================
Negative number
==================
-34.24
---
(source_file
    (number)
)
==================
Plain text
==================
something@else.com
---
(source_file
    (plain_text)
)
==================
String
==================
"A string with anything inside"
---
(source_file
    (string)
)
==================
Inline keywords
==================
define
---
(source_file
    (inline_keyword)
)
