test/corpus/block.txt
==================
Block with identifier
==================
{ foo }
---
(source_file
    (block
        (identifier)
    )
)
==================
Block with multiple elements
==================
{ foo 42 "hello" }
---
(source_file
    (block
        (identifier)
        (number)
        (string)
    )
)
==================
Nested block
==================
{ foo { bar } }
---
(source_file
    (block
        (identifier)
        (block
            (identifier)
        )
    )
)
==================
Deeply nested blocks
==================
{ a { b { c } } }
---
(source_file
    (block
        (identifier)
        (block
            (identifier)
            (block
                (identifier)
            )
        )
    )
)
==================
Multiple blocks at top level
==================
{ foo } { bar }
---
(source_file
    (block
        (identifier)
    )
    (block
        (identifier)
    )
)
==================
Block with plain text
==================
{ hello@world.com }
---
(source_file
    (block
        (plain_text)
    )
)
