test/corpus/import.txt
==================
Import statement
==================
import "some/file.nlpp"
---
(source_file
    (import_statement
        path: (string)
    )
)
==================
Multiple imports on separate lines
==================
import "first.nlpp"
import "second.nlpp"
---
(source_file
    (import_statement
        path: (string)
    )
    (import_statement
        path: (string)
    )
)
